# EatPulse

./: .env.example  .gitignore  appspec.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
bot/: keyboards.py  main.py  states.py
bot/handlers/: calories.py  errors.py  food_log.py  onboarding.py  reports.py  suggestions.py
core/: calorie_engine.py  classifier.py  models.py  parser.py  report_generator.py  settings.py  suggestion_engine.py
dashboard/api/: app.py  auth.py  dependencies.py
dashboard/api/routes/: calories.py  food_logs.py  users.py  webhook.py
dashboard/frontend/: dashboard.html  index.html
dashboard/frontend/css/: style.css
dashboard/frontend/js/: api.js  auth.js  dashboard.js
database/: connection.py  models.py
database/migrations/: env.py
database/migrations/versions/: 0001_initial_schema.py
database/queries/: food_logs.py  suggestions_log.py  users.py  weekly_reports.py
infra/cloudformation/: certificate.yaml  codedeploy.yaml  compute.yaml  database.yaml  dns.yaml  loadbalancer.yaml  main.yaml
infra/scripts/: bootstrap.sh  install_dependencies.sh  pgbouncer.ini  start_application.sh  stop_application.sh  userdata.sh  validate_service.sh
integrations/: openai_client.py  swiggy_mcp.py  zomato.py
scheduler/: weekly_report_job.py
